--- a/src/app/views/index/index.html.twig
+++ b/src/app/views/index/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    Welcome to your new Silex Application!
+    Welcome to your new Silex Application! {{ testFunction() }}
 {% endblock %}
